--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li> -->
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Marathi</span></li>
-									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI</span></li>
+									<li class="d-flex"><span>Tools:</span> <span>Microsoft Office, VS Code, Itellij idea,Microsoft Power BI, </span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>Leadership, Public Speaking, Excel, Word, Powerpoint</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Cycling, Cricket</span></li>
 									
